<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false"
    tools:context=".presentation.settings.SettingsFragment"
    android:id="@+id/layout_settings">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.zino.mobilization.weatheryamblz.utils.UnitsSwitch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_temp"/>

        <com.zino.mobilization.weatheryamblz.utils.UnitsSwitch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_pressure"
            app:textTitle="@string/pressure"
            app:textLeft="@string/pressure_hpa"
            app:textRight="@string/pressure_mmhg"/>

        <com.zino.mobilization.weatheryamblz.utils.UnitsSwitch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_wind_speed"
            app:textTitle="@string/wind"
            app:textLeft="@string/speed_ms"
            app:textRight="@string/speed_kmh"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:textSize="16sp"
                android:text="@string/update_time"/>

            <RadioGroup
                android:id="@+id/time_radio_group"
                android:layout_below="@+id/time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_manually"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/manually"/>

                <RadioButton
                    android:id="@+id/radio_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/fifteen_min" />

                <RadioButton
                    android:id="@+id/radio_thirteen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/thirteen_min" />

                <RadioButton
                    android:id="@+id/radio_one_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/one_hour"/>

                <RadioButton
                    android:id="@+id/radio_three_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/three_hour"/>

            </RadioGroup>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
