<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/colorDownloadingWeatherBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/item_city_padding_left_right"
        android:paddingRight="@dimen/item_city_padding_left_right"
        android:paddingTop="@dimen/item_city_padding_top_bottom"
        android:paddingBottom="@dimen/item_city_padding_top_bottom">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/img_condition"
            tools:src="@drawable/sun"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_city"
            android:textSize="22sp"
            style="@style/SingleLineTextView"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintTop_toTopOf="@+id/img_condition"
            app:layout_constraintLeft_toRightOf="@+id/img_condition"
            app:layout_constraintRight_toLeftOf="@+id/txt_temperature"
            tools:text="Moscow"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_description"
            android:textSize="14sp"
            style="@style/SingleLineTextView"
            android:alpha="0.6"
            app:layout_constraintRight_toRightOf="@+id/txt_city"
            app:layout_constraintTop_toBottomOf="@+id/txt_city"
            app:layout_constraintLeft_toLeftOf="@+id/txt_city"
            app:layout_constraintBottom_toBottomOf="@+id/img_condition"
            tools:text="Clear"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_temperature"
            android:textSize="35sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide_left"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide_right"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.67"/>

        <ImageView
            android:layout_width="@dimen/additional_info_icon_size"
            android:layout_height="@dimen/additional_info_icon_size"
            android:id="@+id/img_humidity"
            android:src="@drawable/ic_humidity"
            android:layout_marginTop="@dimen/additional_info_icon_margin_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guide_left"
            app:layout_constraintTop_toBottomOf="@+id/img_condition"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_humidity_title"
            android:text="@string/humidity"
            style="@style/WeatherAdditionalInfoTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guide_left"
            app:layout_constraintTop_toBottomOf="@+id/img_humidity" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_humidity_value"
            style="@style/WeatherAdditionalInfoValue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guide_left"
            app:layout_constraintTop_toBottomOf="@+id/txt_humidity_title"
            tools:text="50%"/>

        <ImageView
            android:layout_width="@dimen/additional_info_icon_size"
            android:layout_height="@dimen/additional_info_icon_size"
            android:id="@+id/img_wind"
            android:src="@drawable/ic_wind"
            android:layout_marginTop="@dimen/additional_info_icon_margin_top"
            app:layout_constraintLeft_toLeftOf="@+id/guide_left"
            app:layout_constraintRight_toRightOf="@+id/guide_right"
            app:layout_constraintTop_toBottomOf="@+id/img_condition"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_wind_title"
            android:text="@string/wind"
            style="@style/WeatherAdditionalInfoTitle"
            app:layout_constraintLeft_toLeftOf="@+id/guide_left"
            app:layout_constraintRight_toRightOf="@+id/guide_right"
            app:layout_constraintTop_toBottomOf="@+id/img_wind" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_wind_value"
            style="@style/WeatherAdditionalInfoValue"
            app:layout_constraintLeft_toLeftOf="@+id/guide_left"
            app:layout_constraintRight_toRightOf="@+id/guide_right"
            app:layout_constraintTop_toBottomOf="@+id/txt_wind_title"
            tools:text="5 m/s"/>

        <ImageView
            android:layout_width="@dimen/additional_info_icon_size"
            android:layout_height="@dimen/additional_info_icon_size"
            android:id="@+id/img_pressure"
            android:src="@drawable/ic_pressure"
            android:layout_marginTop="@dimen/additional_info_icon_margin_top"
            app:layout_constraintLeft_toLeftOf="@+id/guide_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_condition"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_pressure_title"
            android:text="@string/pressure"
            style="@style/WeatherAdditionalInfoTitle"
            app:layout_constraintLeft_toLeftOf="@+id/guide_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_pressure"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_pressure_value"
            style="@style/WeatherAdditionalInfoValue"
            app:layout_constraintLeft_toLeftOf="@+id/guide_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pressure_title"
            tools:text="1054 hPa"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>